# holumbus

./: .ghci  .gitignore  Holumbus.cabal  LICENSE  Main.hs  Makefile  README  README.md  Spoogle.cabal  W3W.cabal  clean_quick.sh  crawl2.cabal  indexJob.sh  installCronjob.sh  make.sh  make_quick.sh  pdf2text.sh
Hayoo/: .gitignore  Hayoo.cabal  HayooSnap.cabal  HayooSnap7.cabal  HayooSnap8.cabal  Makefile
Hayoo/HayooIndexer/: .gitignore  Hayoo-Indexer.cabal  HayooIndexer.hs  Makefile  README.md
Hayoo/HayooIndexer/Hayoo/: HackagePackage.hs  Haddock.hs  IndexConfig.hs  IndexerCore.hs  PackageArchive.hs  URIConfig.hs
Hayoo/HayooIndexer/index/: .gitignore  Makefile
Hayoo/HayooIndexer/test/: .gitignore  Dependencies.txt  PackageRank.hs  PackageRankString.hs
Hayoo/HayooIndexerLib/: Hayoo-Indexer-Lib.cabal
Hayoo/HayooIndexerLib/Hayoo/: IndexTypes.hs  PackageInfo.hs  PackageRank.hs  Signature.hs
Hayoo/HayooLib/: Hayoo-Lib.cabal
Hayoo/HayooLib/Hayoo/: FunctionInfo.hs
Hayoo/HayooSnap/: Hayoo-Snap.cabal  HayooSnap11.hs  Makefile  README
Hayoo/HayooSnap/index/: .gitignore
Hayoo/index/: .gitignore  Makefile
Hayoo/index/lib/: .gitignore
Hayoo/src/: Dummy.hs  HayooFastCGI.hs  HayooIndexer.hs  HayooSearch.hs  HayooSnap.hs  HayooSnap11.hs  HayooSnap7.hs  HayooSnap8.hs
Hayoo/src/Hayoo/: FctIndexerCore.hs  FunctionInfo.hs  Haddock.hs  IndexConfig.hs  IndexTypes.hs  PackageArchive.hs  PackageInfo.hs  PackageRank.hs  PkgIndexerCore.hs  PostToServer.hs  URIConfig.hs
Holumbus-Searchengine/: Holumbus-Searchengine.cabal  Makefile  README
Holumbus-Searchengine/src/Holumbus/: ByteStringCompression.hs  Crawler.hs  Utility.hs
Holumbus-Searchengine/tests/: IndexStrict.hs  IntMapStrictBinTree.hs  OccSet.hs  ToTree.hs  occ-set.cabal
W3W/: .gitignore  README  W3W.cabal  cronfile  genScripts.sh  indexJob.sh  installCronjob.sh
W3W/index/: .gitignore  Makefile
W3W/resources/static/: ajax.js  screen.css
W3W/resources/templates/: frontpage.tpl
W3W/src/: Application.hs  Date.hs  EvalSearch.hs  Extract.hs  Helpers.hs  IndexConfig.hs  IndexTypes.hs  Main.hs  PageInfo.hs  Site.hs  URIConfig.hs  W3WIndexer.hs  W3WSimpleSearch.hs  W3WState.hs
W3W/src/W3W/: Extract.hs  IndexConfig.hs  PageInfo.hs  URIConfig.hs
WWWCheck/: WWWCheck.cabal
WWWCheck/examples/: .gitignore  Makefile  URIChecker.hs
WWWCheck/src/WWWCheck/: OutputTemplate.hs  SimpleURIChecker.hs  URIChecker.hs
crawl2/: LICENSE  crawl2.cabal
crawl2/Examples2/Re/: Client.hs  Makefile  SimpleSearch.hs
crawl2/Examples2/Re_2/: Client.hs  Makefile  Worker.hs
crawl2/examples/cachecrawler/: .ghci  .gitignore  Makefile  SimpleCache.hs
crawl2/examples/fussballsprueche/: .ghci  Crawl.hs  FussballerSprueche.hs  Makefile
crawl2/examples/hayoo/: .ghci  .gitignore  Haddock.hs  HayooCache.hs  HayooConfig.hs  HayooFastCGI.hs  HayooIndexer.hs  HayooSearch.hs  HayooSignature.hs  LatestPackages.hs  Makefile  Test.hs  performance.txt
crawl2/examples/mapfold/: .ghci  MapFold.hs  MapFoldBinary.hs
crawl2/examples/simpleindexer/: .ghci  .gitignore  Makefile  SimpleIndexer.hs
crawl2/examples/textcrawler/: .ghci  CrawlerSi.hs  Makefile
crawl2/examples/urlchecker/: .ghci  .gitignore  Makefile  OutputTemplate.hs  SimpleURIChecker.hs  URIChecker.hs  resultTemplate.html
crawl2/src/Holumbus/: Crawler.hs
distribution/: Holumbus-Distributed.cabal  Holumbus-Distribution.cabal  LICENSE  Makefile  README
distribution/Examples/: Makefile
distribution/Examples/ClientServer/: Client.hs  Makefile  Server.hs
distribution/Examples/Distribution/: Makefile
distribution/Examples/Ports/: Makefile  Receiver.hs  Single.hs
distribution/Programs/: Makefile
distribution/Programs/PortRegistry/: Makefile  PortRegistry.hs
distribution/Programs/PortRegistryDaemon/: Makefile  PortRegistry  PortRegistryDaemon.hs
mapreduce/: Holumbus-MapReduce.cabal  Makefile  MrHaskell.cabal  README
mapreduce/Examples/: Makefile
mapreduce/Examples/Crawler/: Config.hs  Crawl.hs  CrawlerMain.hs  CrawlerWorker.hs  Index.hs  Makefile
mapreduce/Examples/FileSystem/: ClientMain.hs  ControllerMain.hs  Makefile  NodeMain.hs
mapreduce/Examples/MapReduce/: Makefile
mapreduce/Examples/communication/: Server.hs
mapreduce/Examples/dMapReduce/: ClientMain.hs  MasterMain.hs  WorkerMain.hs
mapreduce/Examples/filehandling/: Makefile
mapreduce/Examples/pickle/: Makefile  PickleTest.hs
mapreduce/Examples/portregistry/: PortRegistry.hs
mapreduce/Examples/ports/: Sender.hs
mapreduce/Examples2/CountWithSimpleIO/: Client.hs  DCount.hs  Worker.hs  runtest  runtest2  worker.sh
mapreduce/Examples2/CountWithSimpleIO2/: Client.hs  DCount.hs  Makefile  Worker.hs  runtest2  test
mapreduce/Examples2/Id/: Id.hs  IdClient.hs  IdWorker.hs
mapreduce/Examples2/IdWithSimpleDMR/: Id.hs  IdClient.hs  IdWorker.hs  Makefile  SimpleDMR.hs  copyHolumbus  evaluate  startTest  worker
mapreduce/Examples2/Mandel/: DMandel.hs  ImageMain.hs  ImageMandel.hs  ImageTypes.hs  Makefile  Mandel.hs  MandelClient.hs  MandelWorker.hs  MandelWorker.init  copyHolumbus  evaluate  initWorker  startTest  startTest2  worker
mapreduce/Examples2/MandelWithSimpleIO/: Client.hs  DMandel.hs  ImageMandel.hs  ImageTypes.hs  Mandel.hs  Worker.hs  runtest  runtest2  runtest3
mapreduce/Examples2/MandelWithoutReduce/: Client.hs  DMandel.hs  ImageMandel.hs  ImageTypes.hs  Mandel.hs  MapReduceFacade.hs  Worker.hs  config_1  runtest2  runtest3
mapreduce/Examples2/MandelWithoutReduce3/: Client.hs  DMandel.hs  ImageMandel.hs  ImageTypes.hs  Makefile  Mandel.hs  MapReduceFacade.hs  Test.hs  Worker.hs
mapreduce/Programs/: Makefile
mapreduce/examples/: Makefile
searchengine/: .gitignore  Holumbus-Searchengine.cabal  Holumbus.cabal  Makefile
searchengine/test/: .ghci  .gitignore  AllTests.hs  BinaryTest.hs  DiffListTest.hs  FuzzyTest.hs  Holumbus-Tests.cabal  InvertedTest.hs  Makefile  ParserTest.hs  PickleTest.hs  PrefixTreeTest.hs  PrefixTreeTest2.hs  SampleData.hs  SpaceTest.hs  StrMapTest.hs
storage/: Holumbus-Storage.cabal  Makefile  README
storage/Examples/: Makefile
(+929 files in other folders)
