name:          Holumbus
version:       0.1
license:       OtherLicense
license-file:  LICENSE
author:        Uwe Schmidt, Sebastian M. Schlatt and Timo B. Hübel
copyright:     Copyright (c) 2007 Uwe Schmidt, Sebastian M. Schlatt and Timo B. Hübel
maintainer:    Timo B. Hübel <t.h@gmx.info>
stability:     experimental
category:      Unclassified
synopsis:      A distributed search and indexing engine.
homepage:      http://holumbus.schlatt.com
description:   The Holumbus library provides a document indexer and crawler to build indexes over document collections as well as a sophisticated query interface for these indexes.
cabal-version: >=1.2

flag splitBase
  description: Chose the new smaller, split-up base package.

library
  if flag(splitBase)
    build-depends: base >= 3, haskell98, containers, parallel, parsec, hxt, bytestring, binary
  else
    build-depends: base < 3, haskell98, parsec, hxt, bytestring, binary
  exposed-modules:
    Holumbus.Control.Sequence,
    Holumbus.Data.StrMap,
    Holumbus.Data.BiMap,
    Holumbus.Data.DiffList,
    Holumbus.Query.Parser,
    Holumbus.Query.Syntax,
    Holumbus.Query.Processor,
    Holumbus.Query.Result,
    Holumbus.Query.Fuzzy,
    Holumbus.Query.Ranking,
    Holumbus.Index.Inverted,
    Holumbus.Index.Hybrid,
    Holumbus.Index.Common,
    Holumbus.Index.Documents
  other-modules:
    Holumbus.Data.StrMapInternal
  hs-source-dirs: source
  ghc-options:    -Wall -O
