name:          Holumbus
version:       0.1
license:       OtherLicense
license-file:  LICENSE
author:        Uwe Schmidt, Sebastian M. Schlatt and Timo B. Hübel
copyright:     Copyright (c) 2007, 2008 Uwe Schmidt, Sebastian M. Schlatt and Timo B. Hübel
maintainer:    Timo B. Hübel <tbh@holumbus.org>
stability:     experimental
category:      Unclassified
synopsis:      A distributed search and indexing engine.
homepage:      http://holumbus.org
description:   The Holumbus library provides a document indexer and crawler to build indexes over document collections as well as a sophisticated query interface for these indexes.
cabal-version: >=1.2

flag splitBase
  description: Choose the new smaller, split-up base package.

library
  if flag(splitBase)
    build-depends: base >= 3
                 , haskell98
                 , containers
                 , parallel
                 , parsec
                 , network
                 , bytestring
                 , hxt
                 , binary
                 , bzlib
  else
    build-depends: base < 3
                 , haskell98
                 , parsec
                 , network
                 , bytestring
                 , hxt
                 , binary
                 , bzlib
  exposed-modules:
    Holumbus.Control.Sequence,
    Holumbus.Data.StrMap,
    Holumbus.Data.DiffList,
    Holumbus.Query.Parser,
    Holumbus.Query.Language,
    Holumbus.Query.Processor,
    Holumbus.Query.Intermediate,
    Holumbus.Query.Distribution,
    Holumbus.Query.Result,
    Holumbus.Query.Fuzzy,
    Holumbus.Query.Ranking,
    Holumbus.Index.Inverted,
    Holumbus.Index.Hybrid,
    Holumbus.Index.Common,
    Holumbus.Index.Documents
  other-modules:
    Holumbus.Data.StrMapInternal
  hs-source-dirs: source
  ghc-options:    -Wall -O
