name:          Holumbus
version:       0.4
license:       OtherLicense
license-file:  LICENSE
author:        Uwe Schmidt, Sebastian M. Schlatt and Timo B. Hübel
copyright:     Copyright (c) 2007, 2008 Uwe Schmidt, Sebastian M. Schlatt and Timo B. Hübel
maintainer:    Timo B. Hübel <tbh@holumbus.org>
stability:     experimental
category:      Text, Data
synopsis:      A distributed search and indexing engine.
homepage:      http://holumbus.fh-wedel.de
description:   The Holumbus library provides a document indexer and crawler to build indexes over document collections as well as a sophisticated query interface for these indexes.
cabal-version: >=1.2

flag splitBase
  description: Choose the new smaller, split-up base package.

library
  build-depends: base >= 3
               , haskell98
               , containers
               , old-time
               , parallel
               , parsec
               , network
               , bytestring
               , unix
               , utf8-string
               , hxt
               , binary
               , bzlib
               , regex-compat
               , HDBC
               , HDBC-sqlite3
               , pureMD5 >= 0.1.2 && < 0.2
  exposed-modules:
    Holumbus.Utility,
    Holumbus.Build.Crawl,
    Holumbus.Build.Index,
    Holumbus.Build.Config,
--    Holumbus.Control.MapReduce.MapReducible,
--    Holumbus.Control.MapReduce.Parallel,
    Holumbus.Control.MapReduce.ParallelOld,
    Holumbus.Control.Registry,
    Holumbus.Data.Crunch,
    Holumbus.Data.DiffList,
    Holumbus.Data.StrMap,
    Holumbus.Data.Trie,
    Holumbus.Index.Cache,
    Holumbus.Index.Common,
    Holumbus.Index.Compression,
    Holumbus.Index.Documents,
    Holumbus.Index.Hybrid.Memory,
    Holumbus.Index.Inverted.Memory,
    Holumbus.Index.Inverted.OneFile,
    Holumbus.Index.Inverted.Persistent,
    Holumbus.Query.Distribution.Client,
    Holumbus.Query.Distribution.Protocol,
    Holumbus.Query.Distribution.Server,
    Holumbus.Query.Language.Parser,
    Holumbus.Query.Language.Grammar,
    Holumbus.Query.Fuzzy,
    Holumbus.Query.Intermediate,
    Holumbus.Query.Processor,
    Holumbus.Query.Ranking,
    Holumbus.Query.Result
  hs-source-dirs: source
  ghc-options: -Wall -O
