name:          Hayoo
version:       1.0.1
license:       MIT
license-file:  LICENSE
author:        Sebastian M. Schlatt, Timo B. Huebel, Uwe Schmidt
copyright:     Copyright (c) 2007 - 2011 Uwe Schmidt, Sebastian M. Schlatt and Timo B. Huebel
maintainer:    Timo B. Huebel <tbh@holumbus.org>
stability:     experimental
category:      Text, Data
synopsis:      The Hayoo! search engine for Haskell API search on hackage
homepage:      http://holumbus.fh-wedel.de
description:   The Hayoo! search engine based no the Holumbus framework provides a document indexer
               and a crawler to build indexes over Haddock generated API documentation and packages
               as well as a query interface for these indexes.
cabal-version: >=1.6
build-type:    Simple
-- tested-with:   ghc-6.12.1 and ghc-7.0.3

extra-source-files:
    README
    index/lib/hayoo.css
    index/lib/fhw.gif
    index/lib/loader.gif
    index/lib/favicon.ico
    index/lib/content.js
    index/lib/hayoo.js
    index/lib/prototype.js
    index/lib/ft.png
    index/lib/hayoo.png
    index/lib/hol.png
    index/lib/holumbus.png
    index/lib/minus.png
    index/lib/plus.png
    index/lib/opensearch.xml

-- ------------------------------------------------------------

executable hayooIndexer
  main-is:      HayooIndexer.hs

  other-modules:  Hayoo.PackageInfo
                , Hayoo.URIConfig
                , Hayoo.PackageArchive
                , Hayoo.IndexTypes
                , Hayoo.Haddock
                , Hayoo.HackagePackage
                , Hayoo.IndexConfig

  build-depends: base                   >= 4   && < 5
               , Holumbus-Searchengine  >= 1   && < 2
               , binary                 >= 0.5 && < 1
               , bytestring             >= 0.9 && < 1
               , bzlib                  >= 0.4 && < 1
               , containers             >= 0.2 && < 1
               , deepseq                >= 1.1 && < 2
               , filepath               >= 1   && < 2
               , haskell98              >= 1   && < 2
               , hxt                    >= 9.1 && < 10
               , hxt-cache              >= 9   && < 10
               , hxt-charproperties     >= 9   && < 10
               , hxt-curl               >= 9   && < 10
               , hxt-http               >= 9   && < 10
               , hxt-regex-xmlschema    >= 9   && < 10
               , hxt-xpath              >= 9.1 && < 10
               , network                >= 2.1 && < 3
               , old-time               >= 1   && < 2
               , parsec                 >= 2.1 && < 4
               , process                >= 1   && < 2
               , tar                    >= 0.3 && < 1
               , zlib                   >= 0.5 && < 1 

  hs-source-dirs: src

  if impl( ghc >= 7 )
    ghc-options: -threaded -Wall -funbox-strict-fields -rtsopts
  else
    ghc-options: -threaded -Wall -funbox-strict-fields

  extensions:

-- ------------------------------------------------------------

executable hayooSearch
  main-is:      HayooSearch.hs

  other-modules:  Hayoo.FunctionInfo
                , Hayoo.IndexTypes
                , Hayoo.PackageInfo
                , Hayoo.PackageRank
                , Hayoo.Search.Application
                , Hayoo.Search.Common
                , Hayoo.Search.EvalSearch
                , Hayoo.Search.HTML
                , Hayoo.Search.JSON
                , Hayoo.Search.Pages.Static
                , Hayoo.Search.Pages.Template
                , Hayoo.Search.Parser
                , Hayoo.Signature

  build-depends: base                      >= 4   && < 5
               , Holumbus-Searchengine     >= 1   && < 2
               , hack                      >= 2009.10.30
               , hack-contrib              >= 2010.9.28
               , hslogger                  >= 1   && < 2
               , hxt-unicode               >= 9   && < 10
               , json                      >= 0.4 && < 1
               , text                      >= 0.7 && < 1
               , xhtml-combinators         >= 0.2 && < 1

  if impl( ghc >= 7.0.3 )
    build-depends: hack-handler-simpleserver >= 0.2.0.2 && < 1
  else
    build-depends: hack-handler-simpleserver == 0.2.0.1

  hs-source-dirs: src

  if impl( ghc >= 7 )
    ghc-options: -threaded -Wall -funbox-strict-fields -rtsopts
  else
    ghc-options: -threaded -Wall -funbox-strict-fields

  extensions:

-- ------------------------------------------------------------

executable hayooFastGCI
 if impl( ghc >= 7.0.3)
  main-is:      Dummy.hs
 else
  main-is:      HayooFastCGI.hs

  other-modules:  Hayoo.FunctionInfo
                , Hayoo.IndexTypes
                , Hayoo.PackageInfo
                , Hayoo.PackageRank
                , Hayoo.Search.Application
                , Hayoo.Search.Common
                , Hayoo.Search.EvalSearch
                , Hayoo.Search.HTML
                , Hayoo.Search.JSON
                , Hayoo.Search.Pages.Static
                , Hayoo.Search.Pages.Template
                , Hayoo.Search.Parser
                , Hayoo.Signature

  build-depends: base                      >= 4   && < 5
               , Holumbus-Searchengine     >= 1   && < 2
               , hack                      >= 2009.10.30
               , hack-contrib              >= 2010.9.28
               , hack-handler-fastcgi      >= 0.2 && < 1
               , hslogger                  >= 1   && < 2
               , hxt-unicode               >= 9   && < 10
               , json                      >= 0.4 && < 1
               , text                      >= 0.7 && < 1
               , xhtml-combinators         >= 0.2 && < 1

 hs-source-dirs: src

 if impl( ghc >= 7 )
   ghc-options: -threaded -Wall -funbox-strict-fields -rtsopts
 else
   ghc-options: -threaded -Wall -funbox-strict-fields

 extensions:

-- ------------------------------------------------------------

executable hayooSnap
 if impl( ghc < 7.0.3)
  main-is:      Dummy.hs
 else
  main-is:      HayooSnap.hs

  other-modules:  Hayoo.FunctionInfo
                , Hayoo.IndexTypes
                , Hayoo.PackageInfo
                , Hayoo.PackageRank
                , Hayoo.Search.Common
                , Hayoo.Search.EvalSearch
                , Hayoo.Search.HTML
                , Hayoo.Search.JSON
                , Hayoo.Search.Pages.Static
                , Hayoo.Search.Pages.Template
                , Hayoo.Search.Parser
                , Hayoo.Signature
                , Hayoo.Snap.Application
                , Hayoo.Snap.Extension.HayooState
                , Hayoo.Snap.Extension.Timer
                , Hayoo.Snap.Extension.Timer.Impl
                , Hayoo.Snap.Site

  build-depends: base                      >= 4   && < 5
               , Holumbus-Searchengine     >= 1   && < 2
               , hslogger                  >= 1   && < 2
               , hxt-unicode               >= 9   && < 10
               , json                      >= 0.4 && < 1
               , text                      >= 0.7 && < 1
               , xhtml-combinators         >= 0.2 && < 1

               -- snap stuff
               , bytestring                >= 0.9.1 && < 0.10
               , heist                     >= 0.5   && < 0.6
               , MonadCatchIO-transformers >= 0.2.1 && < 0.3
               , mtl                       >= 2 && < 3
               , snap                      == 0.4.*
               , snap-core                 == 0.4.*
               , snap-server               == 0.4.*
               , text                      >= 0.11 && < 0.12
               , time                      >= 1.1 && < 1.3
               , transformers              >= 0.2.2 && < 0.3
               , xmlhtml                   == 0.1.*




 hs-source-dirs: src

 ghc-options: -threaded -Wall -funbox-strict-fields -fwarn-tabs -rtsopts
              -fno-warn-orphans -fno-warn-unused-do-bind

 extensions: TypeSynonymInstances MultiParamTypeClasses

-- ------------------------------------------------------------
